<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7F24"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".TelaLogin">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:cropToPadding="false"
        android:src="@drawable/logo_pet" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">

    <EditText
        android:id="@+id/editEmailLoginID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/emailTelaLogin"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel">
    <EditText
        android:id="@+id/editSenhaLoginID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/senhaTelaLogin"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogarID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:text="Entrar"
        android:theme="@style/botaoPadrao" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEsqueceuSenhaID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:onClick="abrirEsqueceuSenha"
            android:layout_weight="1.71"
            android:text="@string/esqueceu_a_senhaTelaLogin"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/txtCadastrarID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.40"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:onClick="abrirCadastroUsuario"
            android:text="@string/cadastrar_seTelaLogin"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="25dp"
        android:layout_weight="0.60"
        android:contentDescription="@null"
        android:src="@drawable/pegada_png" />

</LinearLayout>
