<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF7F24"
    tools:context="net.ddns.vidapet.vidapet.EsqueceuSenha">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:src="@drawable/logo_pet"
        android:contentDescription="@null" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Digite seu email de recuperação"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        android:layout_marginTop="20dp">
    <EditText
        android:id="@+id/editRecuperarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/emailTelaLogin"
        android:inputType="textEmailAddress"
        android:textColor="@color/whiteColor"
        android:textColorLink="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/btnRecuperarSenha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/btnEnviar"
            android:theme="@style/botaoPadrao" />

        <Button
            android:id="@+id/btnCancelarRecuperacaoID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/btnCancelar"
            android:theme="@style/botaoPadrao" />

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.34"
        android:contentDescription="@null"
        android:src="@drawable/pegada_png" />


</LinearLayout>